--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 
 <!-- Created by garybracket on 06/24/2020 for all those Socom junkies who need their audio fixes.
@@ -24,46 +24,50 @@ v2.1 - Remvoed the Matrix effect.
 
 
 <head>
+	<!-- SEO type stuff, like Google indexing, site-crawling spiders, and standard HTML5 information -->
+	
 <meta charset="utf-8"/>
 <meta name="description" content="site by garyproductions. No iLLusion Coming Soon...">
 <meta name="keywords" content="Socom, Socom 2, garybracket, gary], newb Crushers, NC, Socom 3, Socom CA, H-Hour, H Hour, World's Elite, Worlds Elite, Socom Soundboard, Socom 2 Soundboard, Soundboard, Yonkers, bobby satchel, shadow_wolfx2o, Gary, gaming, ps2 gaming, ps2, socom 2 ps2, games like socom, third person shooter, third-person shooter, tps, fps, first person shooter, first-person shooter">
 <meta name="author" content="garybracket">
 <meta name="google-site-verification" content="NW99Yefz89uLajZgtge-YVcP1dEBBT_PCgN2jN7wZ0I" />
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-<title>No iLLusion COMING SOON...</title>
-
-<!-- JavaScript -->
-<script>
-// No code needed here at the moment.
-
-
-</script>
-
+<title>No iLLusion COMING SOON...</title>	
 <link rel="stylesheet" href="styles.css">
+	
 </head>
 
 
 <!-- Body -->
+	
 <body>
+	
 <!-- Navigation Code -->
+	
 <ul class="navul">
   <li class="navli"><a class="active" href="index.html">Home</a></li>
 
 </ul>
+	
 <!-- End Navigation Code -->
 
 <h1> COMING SOON....... </h1>
 <h2 align="center"> No iLLusioN </h2>
 <h3 align="center"><img src="./pics/noilogo.png">   </h3>
 <h3>garyproductions</h3>
-<canvas id="canvas">Canvas is not supported in your browser. </canvas>
 
 
 
- <!-- Any Javascript content goes here -->
+
+<!-- Any JavaScript Goes Here -->
+	
 <script>
+	
+// No code needed here at the moment.
+
 
 </script>
+<!-- End Javascript -->
 
 
 <!-- End of Body -->
