fix site for server 19 iis

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ v2.1 - Remvoed the Matrix effect.
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
 <title>No iLLusion COMING SOON...</title>	
 <link rel="stylesheet" href="styles.css">
-	
+<link rel="icon" href="./pics/favicon.png">	
 </head>
 
 
